bluetooth: Remove device before dispatching event

Changes the order in which we removed the device and dispatched the
disconnected event. The previous order (dispatch -> remove), could result
in removing a device that was added by the event handler.

BUG=621022

Review-Url: https://codereview.chromium.org/2072423002
Cr-Commit-Position: refs/heads/master@{#400601}

Former-commit-id: efe33416c5109c9d155eb081a4894201519d902e